# ktikz

./: .gitignore  CMakeLists.txt  INSTALL
app/: CMakeLists.txt  aboutdialog.cpp  app.pro  configappearancewidget.cpp  configdialog.cpp  configdialog.h  configeditorwidget.cpp  configeditorwidget.ui  configgeneralwidget.cpp  configgeneralwidget.ui  editgotolinewidget.cpp  editgotolinewidget.h  editreplacecurrentwidget.cpp  editreplacecurrentwidget.h  editreplacewidget.cpp  editreplacewidget.h  ktikzapplication.cpp  ktikzapplication.h  main.cpp  mainwindow.cpp  mainwindow.h  tikzcommandinserter.cpp  tikzcommandinserter.h  tikzeditor.cpp  tikzeditorview.cpp  tikzeditorview.h
app/icons/: .directory  CMakeLists.txt
common/: ktikz.kcfg  mainwidget.h  templatewidget.cpp  tikzpreview.cpp  tikzpreview.h  tikzpreviewcontroller.cpp  tikzpreviewcontroller.h  tikzpreviewgenerator.cpp  tikzpreviewgenerator.h  tikzpreviewthread.cpp
common/utils/: action.cpp  action.h  colorbutton.cpp  colorbutton.h  colordialog.h  filedialog.cpp  filedialog.h  fontdialog.h  icon.h  lineedit.cpp  lineedit.h  recentfilesaction.cpp  recentfilesaction.h  selectaction.cpp  selectaction.h  standardaction.cpp  standardaction.h  toggleaction.cpp  toggleaction.h  url.cpp  url.h
doc/: CMakeLists.txt
part/: CMakeLists.txt  configdialog.cpp  configdialog.h  configgeneralwidget.cpp  part.cpp  part.h
